--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "minAppVersion": "1.7.0",
   "description": "Logseq-like, outliner-focused task management with query-based side pane views.",
   "author": "Bryan Ma",
-  "authorUrl": "https://github.com/wajmjjj",
+  "authorUrl": "https://github.com/tomisacat",
   "isDesktopOnly": true,
   "js": "main.js",
   "css": "styles.css"
